--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,8 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-                <activity
-            android:name=".PaperDetailActivity"\
+        <activity
+            android:name=".PaperDetailActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
